--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,45 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background: #000000;
 }
 
 a {
   color: #00B7FF;
+}
+
+h1, h2, h3, h4{
+	color: #9C9C9C
+}
+
+p{
+	color: #DFDFDF
+}
+
+#locInfo{
+	background: #9C9C9C;
+	border-style: solid;
+	border-width: 5px;
+	border-radius: 15px;
+	border-color: #1A1A1A;
+}
+
+.locAdmin{
+	background: #9C9C9C;
+}
+
+#map3d{
+	border-style: solid;
+	border-width: 5px;
+	border-radius: 15px;
+	border-color: #1A1A1A;
+}
+
+#locInfo h1,h2,h3,h4,p{
+	padding: 10px 10px 10px 10px;
+	color: #000000;
+}
+
+#locInfo a{
+	color: #00004C;
 }
