--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,8 +4,8 @@ html
 		link(href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap-combined.min.css",rel="stylesheet")
 		script(src='http://code.jquery.com/jquery.js')
 		script(type="text/javascript", src="https://www.google.com/jsapi")
+		script(type="text/javascript", src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDeeGCOvPvYf0M3ZVkbnl1y10lsWUi7Vc&sensor=false")
 		link(rel='stylesheet', href='/stylesheets/style.css')
-		script(type="text/javascript", src="/javascripts/index.js")
 
 	body
 		block content
